fixed alignment

--- a/style.css
+++ b/style.css
@@ -358,6 +358,7 @@ article .icon {
 #projects {
   position: relative;
   margin-top: 120px;
+  margin-bottom: 10px;
 }
 
 .color-container {
@@ -389,6 +390,7 @@ article .icon {
   flex-direction: column;
   height: 70vh;
   margin-top: 120px;
+  margin-bottom: 2px;
 }
 
 .contact-info-upper-container {
